fix(Textarea): Fix spacing bug

--- a/react/Textarea/Textarea.less
+++ b/react/Textarea/Textarea.less
@@ -92,12 +92,12 @@
   &::-webkit-scrollbar {
     display: none; // Safari and Chrome
   }
+
+  &::after {
+    content: '\A';
+  }
 }
 
 .invalidTextChunk {
   display: inline;
-
-  &:last-child::after {
-    content: '\A';
-  }
 }
